--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -15,67 +15,55 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>Data Jounalism</h1>
+        <h1 align="left";> Data Jounalism</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12  col-md-12">
         <div id="scatter">
-          <!-- We append our chart here. -->
+          <!-- here is our chart here -->
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Poverty and the Uninsured:</h2>
-          <p>Adults in low-income households are certainly more likely to be uninsured than people in higher income households, 
-            but not all uninsured adults are in families with low incomes. Texas has the highest number of uninsured adults, 
-            but does not have the highest number of families in poverty. Therefore, there must be other factors that contribute to whether an individual is insured, or not.</p>
+          <h2>Poverty - HealthCare:</h2>
+          <p>From this chart we see a coorelation between povert level and healthcare. The higher poverty level, the more people don't have access to healthcare system.</p>
         </div>
       </div>
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Poverty and Smoking:</h2>
-          <p>In the U.S., people living below the poverty level have higher rates of cigarette smoking than the general population. However, poverty does not appear to be the only factor
-            that contributes to the likelihood of cigarette smoking. States like California and New York fall around the median in terms of poverty rates, but 
-            have some of the lowest rates of smoking relative to their populations.
+          <h2>Poverty - Smoking:</h2>
+          <p>The higher poverty, the more people smoke. 
           </p>
         </div>
       </div>
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Poverty and Obesity:</h2>
-          <p>The U.S. is one of the wealthiest countries in the world and accordingly has high obesity rates; 
-            one-third of the population has obesity plus another third is overweight. It has been suggested that individuals who live in 
-            impoverished regions have poor access to fresh food. Poverty-dense areas are oftentimes called “food deserts,” 
-            implying diminished access to fresh food. Again, there are states, such as New Hampshire, that have very low poverty rates but still have relatively
-            higher rates of obesity.</p>
+          <h2>Poverty - Obesity:</h2>
+          <p>The high poverty level, the more people are obese. The modern life style contribute a lot to that: expensive fresh food, little mobility, fastly available fastfood</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Age and the Uninsured:</h2>
-          <p>Compared with other age groups, young adults are the most likely to go without coverage. This can be expected since young adults tend to be much healthier than other age groups,
-            and can typically risk being uninsured. Massachusetts appears to have the lowest number of uninsured individuals, while Texas has the highest rate, but a much lower median age.
-          An interesting case is Florida, where the median age is much higher than other states at 42, but has much higher rates of poverty.</p>
+          <h2>Age - HealthCare:</h2>
+          <p>Agerage age of people without insurance from 36-40. it takes into account young and elderly people without insurance.</p>
         </div>
       </div>
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Age and Smoking:</h2>
-          <p>It does appear that states with a large proportion of older age groups tend to have the highest rates of smoking. Perhaps states where the median age is higher 
-            have individuals that have smoked for many years, and have chosen not to quit. As opposed to states like Utah where the median age is very low, and much of the population doesn't smoke at all.
+          <h2>Age - Smoking:</h2>
+          <p> Utah has interesting result. less than 10% of younger group of people smoke. 
           </p>
         </div>
       </div>
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Age and Obesity:</h2>
-          <p>There does appear to be slight correlation between a states median age and level of obesity. It seems that higher age groups are more succeptible to being obese, but that is likely not always the case.
-            Older age groups are typically less active than younger groups, and would therefore do much to explain why an older person is more likely to be obese. Clearly there are other factors, like poverty and income that may affect obesity levels.
+          <h2>Age - Obesity:</h2>
+          <p>Mostly middle age people tend to be more obese. 
           </p>
         </div>
       </div>
@@ -83,24 +71,21 @@
     <div class="row">
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Income and the Uninsured:</h2>
-          <p>Many uninsured people cite the high cost of insurance as the main reason they lack coverage. Most uninsured people are in low-income families and have at least one worker in the family. 
-            Reflecting the more limited availability of public coverage in some states. This is quite clearly the case in Texas where the level of uninsured individuals is the highest in the country.</p>
+          <h2>Income - HealthCare:</h2>
+          <p>People with higher income have more access to heathcare systems. Interestingly, Taxas has high rate of uninsured people. and on the other spectrum, Main where there is almost no people without insurance.</p>
         </div>
       </div>
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Income and Smoking:</h2>
-          <p>A household's income contributes directly to the level of poverty. Therefore, just as states with high rates of poverty tend to have a greater population of individuals that smoke, states with lower median household income will tend
-            to also have higher rates of smoking. States with relatively higher median incomes have some of the lowest rates of smoking. 
+          <h2>Income - Smoking:</h2>
+          <p>The states with low income have high percentage of smokers.  
           </p>
         </div>
       </div>
       <div class="col-xs-6  col-md-4">
         <div class="article">
-          <h2>Income and Obesity:</h2>
-          <p>Overall obesity prevalence does tend to decrease with increased levels of income. Just as poverty affects the availability of healthy food options, as does income. Lower income residents liekly do not have the same access to low cost healthy food choices
-            as does higher income groups.
+          <h2>Income - Obesity:</h2>
+          <p>There is a clear corelation between Income level and obesity.
           </p>
         </div>
       </div>
@@ -118,7 +103,7 @@
     crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-  <script type="text/javascript" src="assets/js/app_ir.js"></script>
+  <script type="text/javascript" src="assets/js/app_ir2.js"></script>
 
 </body>
 
