added folder with solutions to additional requirements

--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -15,85 +15,33 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1 align="left";> Data Jounalism</h1>
+        <h1 align="left">DATA JOURNALISM</h1>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12  col-md-12">
+      <div class="col-xs-12  col-md-9">
         <div id="scatter">
-          <!-- here is our chart here -->
+          <!-- We append our chart here. -->
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6  col-md-4">
+      <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Poverty - HealthCare:</h2>
-          <p>From this chart we see a coorelation between povert level and healthcare. The higher poverty level, the more people don't have access to healthcare system.</p>
-        </div>
-      </div>
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Poverty - Smoking:</h2>
-          <p>The higher poverty, the more people smoke. 
-          </p>
-        </div>
-      </div>
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Poverty - Obesity:</h2>
-          <p>The high poverty level, the more people are obese. The modern life style contribute a lot to that: expensive fresh food, little mobility, fastly available fastfood</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Age - HealthCare:</h2>
-          <p>Agerage age of people without insurance from 36-40. it takes into account young and elderly people without insurance.</p>
-        </div>
-      </div>
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Age - Smoking:</h2>
-          <p> Utah has interesting result. less than 10% of younger group of people smoke. 
-          </p>
-        </div>
-      </div>
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Age - Obesity:</h2>
-          <p>Mostly middle age people tend to be more obese. 
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Income - HealthCare:</h2>
-          <p>People with higher income have more access to heathcare systems. Interestingly, Taxas has high rate of uninsured people. and on the other spectrum, Main where there is almost no people without insurance.</p>
-        </div>
-      </div>
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Income - Smoking:</h2>
-          <p>The states with low income have high percentage of smokers.  
-          </p>
-        </div>
-      </div>
-      <div class="col-xs-6  col-md-4">
-        <div class="article">
-          <h2>Income - Obesity:</h2>
-          <p>There is a clear corelation between Income level and obesity.
-          </p>
+          <h2 align="center"> Povert Level and Uninsured people</h2>
+          <p> From this chart, we see that there is a clear correation between poverty level and lack of healthcare amoung 
+            people in this group. People with low income can't afford expensive healthcare program and doctors services.</p>
+
+          <p>...</p>
         </div>
       </div>
     </div>
   </div>
 
   <!-- Footer-->
-
+  <div id="footer">
+    <p>Irina Fedorova&copy;2021</p>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -103,7 +51,7 @@
     crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.js"></script>
-  <script type="text/javascript" src="assets/js/app_ir2.js"></script>
+  <script type="text/javascript" src="assets/js/app_ir3.js"></script>
 
 </body>
 
