--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -28,9 +28,11 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2 align="center"> Povert Level and Uninsured people</h2>
+          <h2 align="center"> Poverty Level and Uninsured people</h2>
           <p> From this chart, we see that there is a clear correation between poverty level and lack of healthcare amoung 
-            people in this group. People with low income can't afford expensive healthcare program and doctors services.</p>
+            people in this group. People with low income can't afford expensive healthcare program and doctors services.
+            There are a couple of outliers as Washington Dc, where poverty level is high, but people get medical assistance as in Colorado and Hawaii.
+            and New Mexico is the second top poverty state and people are lacking the medical assistance as on average among all states. </p>
 
           <p>...</p>
         </div>
