--- a/D3_data_journalism_bonus/index.html
+++ b/D3_data_journalism_bonus/index.html
@@ -15,7 +15,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1 align="left";> Data Jounalism</h1>
+        <h1 align="left";> DATA JOURNALISM</h1>
+        <h1 align="left";> Correlation between Risk Factors: </h1>
+        <h1 align="left";> Obesity, Smoke, Insurance vs Poverty, Age, and Income</h1>
       </div>
     </div>
     <div class="row">
